# tdm

./: .gitignore  CMakeLists.txt  Changelog.md  README.md  build.bat  meson.build  meson_options.txt
examples/: main.cpp
include/: axis_angle.h  common_math.h  euler.h  exponential_map.h  mat2.h  mat3.h  mat4.h  orientation.h  orientation_matrix.h  pch.h  polar2.h  polar3.h  quaternion.h  vec2.h  vec3.h  vec4.h
src/: euler.cpp  mat2.cpp  mat3.cpp  mat4.cpp  orientation_matrix.cpp  polar2.cpp  polar3.cpp  quaternion.cpp  vec2.cpp  vec3.cpp  vec4.cpp
tests/: test_common_math.cpp  test_euler.cpp  test_mat2.cpp  test_mat3.cpp  test_mat4.cpp  test_orientation.cpp  test_polar2.cpp  test_polar3.cpp  test_quaternion.cpp  test_vectors.cpp
